Template button overlapping issue fixed

--- a/assets/admin/css/alpha-admin.css
+++ b/assets/admin/css/alpha-admin.css
@@ -564,7 +564,7 @@ img.tk_customer_avatar {
 .fs_create_response .fc_template_box {
   position: absolute;
   right: 20px;
-  z-index: 999999;
+  z-index: 1000;
 }
 .fs_create_response .fs_response_actions {
   padding-top: 10px;
